# tokio-retry

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.devcontainer/: devcontainer.json
.github/workflows/: audit.yml  coverage.yml  outdated.yml  rust.yaml
src/: action.rs  error.rs  future.rs  lib.rs  notify.rs
src/strategy/: exponential_backoff.rs  exponential_factor_backoff.rs  fibonacci_backoff.rs  fixed_interval.rs  jitter.rs  linear_backoff.rs  max_interval.rs  mod.rs
tests/: future.rs
